[package]
name = "baseten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
http = "0.2.9"
openssl = "0.10.57"
serde_json = "1.0.107"
stderr = "0.8.0"
tokio = {version="1.33.0", features=["full", "test-util"]}
tokio-test = "0.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
